--- a/AvalonStudio/AvalonStudio.Languages.CPlusPlus/AvalonStudio.Languages.CPlusPlus.csproj
+++ b/AvalonStudio/AvalonStudio.Languages.CPlusPlus/AvalonStudio.Languages.CPlusPlus.csproj
@@ -75,6 +75,70 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Avalonia.Animation, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.Animation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.Base, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.Base.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.Controls, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.Controls.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.DesignerSupport, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.DesignerSupport.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.Diagnostics, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.Diagnostics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.HtmlRenderer, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.HtmlRenderer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.Input, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.Input.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.Interactivity, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.Interactivity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.Layout, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.Layout.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.Logging.Serilog, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.Logging.Serilog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.Markup, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.Markup.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.Markup.Xaml, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.Markup.Xaml.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.ReactiveUI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.ReactiveUI.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.SceneGraph, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.SceneGraph.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.Styling, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.Styling.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Avalonia.Themes.Default, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Avalonia.0.2.0.1837-alpha\lib\portable-windows8+net45\Avalonia.Themes.Default.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -96,54 +160,6 @@
       <HintPath>..\packages\Sprache.2.0.0.50\lib\portable-net4+netcore45+win8+wp8+sl5+MonoAndroid+Xamarin.iOS10+MonoTouch\Sprache.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
-    <Reference Include="Avalonia.Animation, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.Animation.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.Base, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.Base.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.Controls, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.Controls.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.DesignerSupport, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.DesignerSupport.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.Diagnostics, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.Diagnostics.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.HtmlRenderer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.HtmlRenderer.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.Input, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.Input.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.Interactivity, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.Interactivity.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.Layout, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.Layout.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.Logging.Serilog, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.Logging.Serilog.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.Markup, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.Markup.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.Markup.Xaml, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.Markup.Xaml.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.ReactiveUI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.ReactiveUI.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.SceneGraph, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.SceneGraph.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.Styling, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.Styling.dll</HintPath>
-    </Reference>
-    <Reference Include="Avalonia.Themes.Default, Version=0.0.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Avalonia.0.2.0.1835-alpha\lib\portable-windows8+net45\Avalonia.Themes.Default.dll</HintPath>
-    </Reference>
     <Reference Include="System.Reactive.Core, Version=3.0.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263">
       <HintPath>..\packages\System.Reactive.Core.3.0.0\lib\net45\System.Reactive.Core.dll</HintPath>
     </Reference>
