--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -248,6 +248,9 @@
     <Compile Include="MVVM\BindableCollection.cs" />
     <Compile Include="MVVM\IObservableCollection.cs" />
     <Compile Include="MVVM\MutuallyExclusiveEnumeration.cs" />
+    <Compile Include="Projects\AvalonStudioSolutionType.cs" />
+    <Compile Include="Projects\IProjectType.cs" />
+    <Compile Include="Projects\ISolutionType.cs" />
     <Compile Include="Shell\IShell.cs" />
     <Compile Include="Languages\CodeAnalysisResults.cs" />
     <Compile Include="Languages\CodeCompletionData.cs" />
@@ -323,6 +326,7 @@
     <Compile Include="Utils\IConsole.cs" />
     <Compile Include="Utils\IProjectExtensions.cs" />
     <Compile Include="Utils\SerializedObject.cs" />
+    <Compile Include="Utils\TcpUtils.cs" />
     <Compile Include="Utils\WeakSubscriber.cs" />
   </ItemGroup>
   <ItemGroup>
