--- a/AvalonStudio/AvalonStudio.Languages.CSharp/AvalonStudio.Languages.CSharp.csproj
+++ b/AvalonStudio/AvalonStudio.Languages.CSharp/AvalonStudio.Languages.CSharp.csproj
@@ -136,10 +136,6 @@
       <HintPath>..\packages\Avalonia.0.4.1-build2016-alpha\lib\net45\Avalonia.Themes.Default.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.105.2.3\lib\net452\RestSharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Serilog, Version=1.5.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <HintPath>..\packages\Serilog.1.5.14\lib\net45\Serilog.dll</HintPath>
       <Private>True</Private>
@@ -192,19 +188,18 @@
     <Compile Include="CppIndentationStrategy.cs" />
     <Compile Include="CSharpLanguageService.cs" />
     <Compile Include="IndentationReformatter.cs" />
-    <Compile Include="OmniSharp\AutoCompleteOmniSharpRequest.cs" />
-    <Compile Include="OmniSharp\HighlightOmniSharpRequest.cs" />
-    <Compile Include="OmniSharp\OmniSharpRequest.cs" />
-    <Compile Include="OmniSharp\OmniSharpServer.cs" />
-    <Compile Include="OmniSharp\SignatureHelpExtensionMethods.cs" />
-    <Compile Include="OmniSharp\SignatureHelpOmniSharpRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignatureHelpExtensionMethods.cs" />
     <Compile Include="TextColoringTransformer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
       <Project>{5614AA2F-2B01-4E0D-807E-924680C570ED}</Project>
       <Name>AvalonStudio.Extensibility</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Projects.OmniSharp\AvalonStudio.Projects.OmniSharp.csproj">
+      <Project>{a1686d65-2f40-48ea-b04b-a775730fdd55}</Project>
+      <Name>AvalonStudio.Projects.OmniSharp</Name>
     </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.TextEditor\AvalonStudio.TextEditor.csproj">
       <Project>{2303a1a3-d7aa-41cc-972d-a710d7d3d1d3}</Project>
